--- a/templates/base.html
+++ b/templates/base.html
@@ -1,15 +1,117 @@
 <!DOCTYPE html>
 <html lang="fi">
 <head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+          integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
+            integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
+            integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+            crossorigin="anonymous"></script>
     {% block head %}
-    <title>{% block title %}{% endblock %} - Sdxmenu V2</title>
+        <title>{% block title %}{% endblock %} - Sdxmenu V2</title>
     {% endblock %}
 </head>
 <body>
-    <div id="content">{% block content %}{% endblock %}</div>
-    <div id="footer">
-        {% block footer %}
-        {% endblock %}
+<nav class="navbar navbar-expand-lg navbar-light bg-info">
+    <a class="navbar-brand " href="/"><h2>Sodexo</h2></a>
+    <button class="navbar-toggler btn btn-primary" type="button" data-toggle="collapse"
+            data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse " id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto ">
+            <li class="nav-item active">
+                <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle " href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                   aria-haspopup="true" aria-expanded="false">
+                    Kato! Tämä on menu !
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="/restaurants">Paskaa</a>
+                    <a class="dropdown-item" href="/info">Lisää paskaa</a>
+                </div>
+            </li>
+        </ul>
     </div>
+</nav>
+
+<div id="content container-fluid" style="height: 100% !important; min-height: 100% !important; justify-content: center !important;">
+    {% block content %}{% endblock %}</div>
+
+<!-- Footer -->
+<footer class="page-footer font-small blue pt-4 justify-content-center align-items-center bg-info"
+        style="position:absolute;bottom:0px;width: 100%;">
+
+    <!-- Footer Links -->
+    <div class="container-fluid text-center text-md-left justify-content-center align-items-center"
+         style="margin-left: 00%;">
+
+        <!-- Grid row -->
+        <!-- <div class="row"> -->
+        <!-- Grid column -->
+        <!-- <div class="col-md-6 mt-md-0 mt-3"> -->
+
+        <!-- Content -->
+        <div class="footer-copyright text-center py-3">© 2018 Ovatsia:
+            <h5 class="text-uppercase">Vatsian ruokalistat Oy</h5>
+            <p>Ruokalistaratkaisut pieneen tai suureen tarpeeseen</p>
+        </div>
+
+
+        <!-- </div> -->
+        <!-- Grid column -->
+
+        <!-- <hr class="clearfix w-100 d-md-none pb-3"-->
+
+        <!--        <div class="col-md-3 mb-md-0 mb-3">
+
+                    <h5 class="text-uppercase">Links</h5>
+
+                    <ul class="list-unstyled">
+                        <li>
+                            <a href="#!">Olen Linkki tarvittaessa</a>
+                        </li>
+
+                    </ul>
+
+                </div>
+
+                <div class="col-md-3 mb-md-0 mb-3">
+
+                    <h5 class="text-uppercase">Links</h5>
+
+                    <ul class="list-unstyled">
+                        <li>
+                            <a href="#!">Niinkuin minäkin</a>
+                        </li>
+                    </ul>
+
+                </div>
+
+            </div> -->
+        <!-- Grid row
+
+    </div>-->
+        <!-- Footer Links -->
+
+        <!-- Copyright -->
+        <div class="footer-copyright text-center py-3">© 2018 Ovatsia:
+            <a href="https://www.youtube.com/watch?v=6jJkdRaa04g"> Vatsian kotokolo</a>
+        </div>
+        <!-- Copyright -->
+
+</footer>
+{% block footer %}
+{% endblock %}
+
 </body>
 </html>
