--- a/templates/restaurant_listing.html
+++ b/templates/restaurant_listing.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block title %}Restaurants{% endblock %}
 {% block content %}
-    <h1>Restaurant listing</h1>
+    <div class="d-flex align-items-center">
+    <h1>Restaurant listing</h1></div>
 {% endblock %}
