--- a/templates/restaurant.html
+++ b/templates/restaurant.html
@@ -1,10 +1,12 @@
 {% extends "base.html" %}
-{% block title %}Restaurant{% endblock %}
+{% block title %}{{ menu['meta']['ref_title'] }}{% endblock %}
 {% block content %}
     <h1>Menu for the day</h1>
     <a href="{{ menu['meta']['ref_url'] }}">{{ menu['meta']['ref_title'] }}</a>
     {% for item in menu['courses'] %}
         <p>{{ item['title_fi'] }}</p>
     {% endfor %}
-    <a href="{{ url_for('set_default_restaurant', restaurant_id=restid) }}">Make default restaurant</a>
+    {% if ck < 1 %}
+        <a href="{{ url_for('set_default_restaurant', restaurant_id=restid) }}">Make default restaurant</a>
+    {% endif %}
 {% endblock %}
