Viewport and info page

--- a/templates/info.html
+++ b/templates/info.html
@@ -2,4 +2,6 @@
 {% block title %}Info{% endblock %}
 {% block content %}
     <h1>Info</h1>
+    <p>Sdx-menu v2 is made for quick and mobile-friendly experience for looking daily menus.</p>
+    <p>Menus are queried from Sodexo Oy's API.</p>
 {% endblock %}
