--- a/templates/err_internal_server_error.html
+++ b/templates/err_internal_server_error.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+﻿{% extends "base.html" %}
 {% block title %}Internal Server Error{% endblock %}
 {% block content %}
     <h1>Internal Server Error</h1>
