--- a/templates/err_not_found.html
+++ b/templates/err_not_found.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+﻿{% extends "base.html" %}
 {% block title %}Not found{% endblock %}
 {% block content %}
     <h1>Not found</h1>
