Fixed CSS links. Created the basics for the upcoming extra SCSS code. Other small frontend fixes.

--- a/templates/restaurant_listing.html
+++ b/templates/restaurant_listing.html
@@ -4,6 +4,7 @@
 
   <!--  <div class="d-flex align-items-center" style="align-content: center !important;">
         <h1>Restaurant listing</h1></div> -->
+    <div class="restaurant-listing">
 <table class="table-responsive table-striped" style="padding:1.5rem !important;">
   <thead>
     <tr>
@@ -46,5 +47,5 @@
     {% endfor %}
       </tbody>
 </table>
-
+</div>
 {% endblock %}
