--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
     {% endblock %}
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-info">
+<nav class="navbar navbar-expand-lg navbar-light">
     <a class="navbar-brand " href="/"><h2>Sdx-menu v2</h2></a>
     <button class="navbar-toggler btn btn-primary" type="button" data-toggle="collapse"
             data-target="#navbarSupportedContent"
@@ -51,7 +51,7 @@
     {% block content %}{% endblock %}</div>
 
 <!-- Footer -->
-<footer class="page-footer font-small blue pt-4 justify-content-center align-items-center bg-info"
+<footer class="page-footer font-small blue pt-4 justify-content-center align-items-center"
         style="position:absolute;bottom:0px;width: 100%;">
 
     <!-- Footer Links -->
