trace and remove invisible UTF-character. What a job!

--- a/templates/restaurant.html
+++ b/templates/restaurant.html
@@ -1,4 +1,4 @@
-﻿{% extends "base.html" %}
+{% extends "base.html" %}
 {% block title %}{{ menu['meta']['ref_title'] }}{% endblock %}
 {% block content %}
     <h1><a href="{{ menu['meta']['ref_url'] }}">{{ menu['meta']['ref_title'] }}</a></h1>
