--- a/templates/restaurant_listing.html
+++ b/templates/restaurant_listing.html
@@ -28,16 +28,16 @@
 
   <tbody>
     <tr>
-      <th scope="row"><a href="{{ url_for('restaurant_menu', restaurant_id=id)}}">{{restaurants[id][0]}}</a></th>
-      <td>{{restaurants[id][1]}}</td>
-      <td>{{restaurants[id][3]}}<br>{{restaurants[id][4]}}</td>
+      <th scope="row"><a href="{{ url_for('restaurant_menu', restaurant_id=id)}}">{{restaurants[id][0]}}</a></th> <!--Nimi-->
+      <td>{{restaurants[id][1]}}</td> <!--Puhelinnumero-->
+      <td>{{restaurants[id][3]}}<br>{{restaurants[id][4]}}</td> <!--Osoite-->
 
-        <td>{{restaurants[id][2]}}</td>
-        <td>{{restaurants[id][5][0]}}<br>{{restaurants[id][5][1]}}</td>
-        <td>{{restaurants[id][6][0][1]}}<br>{{restaurants[id][6][0][2]}}</td>
-        <td>{{restaurants[id][6][1][1]}}<br>{{restaurants[id][6][1][2]}}</td>
-        <td>{{restaurants[id][6][2][1]}}<br>{{restaurants[id][6][2][2]}}</td>
-        <td>{{restaurants[id][7]}}</td>
+        <td>{{restaurants[id][2]}}</td> <!--email-->
+        <td><b>{{restaurants[id][5][0]}}</b><br>{{restaurants[id][5][1]}}<br><br><b>{{restaurants[id][5][2]}}</b><br>{{restaurants[id][5][3]}}</td> <!--Aukioloajat-->
+        <td><b>{{restaurants[id][6][0][1]}}</b><br>{{restaurants[id][6][0][2]}}<br><br><b>{{restaurants[id][6][0][3]}}</b><br>{{restaurants[id][6][0][4]}}</td> <!--Aamupala-->
+        <td><b>{{restaurants[id][6][1][1]}}</b><br>{{restaurants[id][6][1][2]}}<br><br><b>{{restaurants[id][6][1][3]}}</b><br>{{restaurants[id][6][1][4]}}</td> <!--Kahvila-->
+        <td><b>{{restaurants[id][6][2][1]}}</b><br>{{restaurants[id][6][2][2]}}<br><br><b>{{restaurants[id][6][2][3]}}</b><br>{{restaurants[id][6][2][4]}}</td> <!--Lounas-->
+        <td>{{restaurants[id][7]}}</td> <!--Info-->
 
     </tr>
 
