--- a/templates/restaurant_listing.html
+++ b/templates/restaurant_listing.html
@@ -5,7 +5,7 @@
   <!--  <div class="d-flex align-items-center" style="align-content: center !important;">
         <h1>Restaurant listing</h1></div> -->
     <div class="restaurant-listing">
-<table class="table-responsive table-striped" style="padding:1.5rem !important;">
+        <!--<table class="table-responsive table-striped" style="padding:1.5rem !important;">
   <thead>
     <tr>
       <th scope="col">Ravintola</th>
@@ -18,34 +18,44 @@
         <th scope="col">Lounas</th>
         <th scope="col">Huom:</th>
     </tr>
-  </thead>
+  </thead> -->
+<div class="card-columns">
     {% for id in restaurants %}
         <!-- <p>
         <a href="{{ url_for('restaurant_menu', restaurant_id=id)}}">{{restaurants[id][0]}}</a>
     </p>
          -->
 
+        <div class="card" style="width: 18rem;">
+  <img class="card-img-top" src="/static/img/{{restaurants[id][8]}}" alt="Card image cap">
+  <div class="card-body">
+    <h5 class="card-title">{{restaurants[id][0]}}</h5>
+    <p class="card-text">{{restaurants[id][3]}}<br>{{restaurants[id][4]}}<br>{{restaurants[id][1]}}<br>{{restaurants[id][2]}}</p>
+    <a href="{{ url_for('restaurant_menu', restaurant_id=id)}}" class="btn btn-primary">Ruokalista</a>
+  </div>
+</div>
 
-  <tbody>
+  <!--<tbody>
     <tr>
-      <th scope="row"><a href="{{ url_for('restaurant_menu', restaurant_id=id)}}">{{restaurants[id][0]}}</a></th> <!--Nimi-->
-      <td>{{restaurants[id][1]}}</td> <!--Puhelinnumero-->
-      <td>{{restaurants[id][3]}}<br>{{restaurants[id][4]}}</td> <!--Osoite-->
+      <th scope="row"><a href="{{ url_for('restaurant_menu', restaurant_id=id)}}">{{restaurants[id][0]}}</a></th> --><!--Nimi-->
+     <!-- <td>{{restaurants[id][1]}}</td> Puhelinnumero-->
+      <!--<td>{{restaurants[id][3]}}<br>{{restaurants[id][4]}}</td> <!--Osoite-->
 
-        <td>{{restaurants[id][2]}}</td> <!--email-->
-        <td><b>{{restaurants[id][5][0]}}</b><br>{{restaurants[id][5][1]}}<br><br><b>{{restaurants[id][5][2]}}</b><br>{{restaurants[id][5][3]}}</td> <!--Aukioloajat-->
-        <td><b>{{restaurants[id][6][0][1]}}</b><br>{{restaurants[id][6][0][2]}}<br><br><b>{{restaurants[id][6][0][3]}}</b><br>{{restaurants[id][6][0][4]}}</td> <!--Aamupala-->
-        <td><b>{{restaurants[id][6][1][1]}}</b><br>{{restaurants[id][6][1][2]}}<br><br><b>{{restaurants[id][6][1][3]}}</b><br>{{restaurants[id][6][1][4]}}</td> <!--Kahvila-->
-        <td><b>{{restaurants[id][6][2][1]}}</b><br>{{restaurants[id][6][2][2]}}<br><br><b>{{restaurants[id][6][2][3]}}</b><br>{{restaurants[id][6][2][4]}}</td> <!--Lounas-->
-        <td>{{restaurants[id][7]}}</td> <!--Info-->
+       <!-- <td>{{restaurants[id][2]}}</td> <!--email-->
+       <!-- <td><b>{{restaurants[id][5][0]}}</b><br>{{restaurants[id][5][1]}}<br><br><b>{{restaurants[id][5][2]}}</b><br>{{restaurants[id][5][3]}}</td> <!--Aukioloajat-->
+       <!-- <td><b>{{restaurants[id][6][0][1]}}</b><br>{{restaurants[id][6][0][2]}}<br><br><b>{{restaurants[id][6][0][3]}}</b><br>{{restaurants[id][6][0][4]}}</td> <!--Aamupala-->
+      <!--  <td><b>{{restaurants[id][6][1][1]}}</b><br>{{restaurants[id][6][1][2]}}<br><br><b>{{restaurants[id][6][1][3]}}</b><br>{{restaurants[id][6][1][4]}}</td> <!--Kahvila-->
+      <!--  <td><b>{{restaurants[id][6][2][1]}}</b><br>{{restaurants[id][6][2][2]}}<br><br><b>{{restaurants[id][6][2][3]}}</b><br>{{restaurants[id][6][2][4]}}</td> <!--Lounas-->
+      <!--  <td>{{restaurants[id][7]}}</td> <!--Info-->
 
-    </tr>
+  <!--  </tr>
 
 
 
 
     {% endfor %}
       </tbody>
-</table>
+</table> -->
+</div>
 </div>
 {% endblock %}
