--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -21,25 +21,49 @@ This is SCSS file to make the website look more pleasant. So far it has been sep
 -----  1. Base  -----
 This is the section for the base. It includes css code for the base template that includes the footer, header and all the basics.
  */
+.content {
+  min-height: 100vh !important;
+
+}
+
+@keyframes pop {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.1) !important;
+    z-scale: 99px !important;
+  }
+
+}
 
 nav {
   top: 0px;
   font-family: $Oxygen !important;
-  background-color: $Tangerine !important;
+  background-color: #FFF !important;
   color: $Teal !important;
-      -webkit-box-shadow: 7px 8px 17px 4px rgba(0,0,0,0.22) !important;
--moz-box-shadow: 7px 8px 17px 4px rgba(0,0,0,0.22) !important;
-box-shadow: 7px 8px 17px 4px rgba(0,0,0,0.22) !important;
+  -webkit-box-shadow: 0px 3px 12px -1px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 3px 12px -1px rgba(0,0,0,0.75);
+box-shadow: 0px 3px 12px -1px rgba(0,0,0,0.75);
+  border-bottom: 1px solid $Tangerine;
 
   a {
-    color: $Tan !important;
-    &:hover{
-      background-color: $Tan !important;
-      color: $Tangerine !important;
+    color: $Tangerine !important;
+    text-transform: capitalize;
+    padding: 0,2rem!important;
+    padding-left:0.2rem !important;
+    padding-right:0.2rem !important;
+
+
+    &:hover {
+      background-color: $Tangerine !important;
+      border-radius: 3px;
+      color: #FFF !important;
     }
   }
+
   h2 {
-        text-shadow: 5px 4px 15px rgba(28,110,164,0.66) !important;
+    //text-shadow: 5px 4px 15px rgba(28, 110, 164, 0.66) !important;
   }
 
   div {
@@ -51,11 +75,22 @@ box-shadow: 7px 8px 17px 4px rgba(0,0,0,0.22) !important;
 }
 
 footer {
-  position: absolute !important;
+  padding-top: 1rem !important;
+  position: static !important;
   width: 100% !important;
   bottom: 0px !important;
-  background-color: $Tangerine !important;
+  max-height: 100% !important;
+  background-color: #FFF !important;
   font-family: $Oxygen !important;
+  border-top: 1px solid $Tangerine;
+  z-index: 1 !important;
+  -webkit-box-shadow: 0px 3px 12px -1px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 3px 12px -1px rgba(0,0,0,0.75);
+box-shadow: 0px 3px 12px -1px rgba(0,0,0,0.75);
+
+  a {
+    color: $Tangerine !important;
+  }
 }
 
 
@@ -70,29 +105,43 @@ This is the CSS code for the restaurant listing page.
  */
 
 .restaurant-listing {
+  background-color: $Tangerine !important;
+  min-height: 100vh !important;
   height: 100% !important;
   //padding-bottom: 17% !important;
 
   .card-columns {
 
-  padding: 2rem !important;
-  .card {
-    //padding: 1 rem !important;
-    //align-content: center !important;
-    &:hover {
-      transform: scale(1.1);
-      z-index: 99 !important;
+    padding: 2rem !important;
+
+    .card {
+      //padding: 1 rem !important;
+      //align-content: center !important;
+      &:hover {
+        transform: scale(1.1);
+        z-index: 99 !important;
+        animation-name: pop;
+        animation-duration: 1s;
+
+      }
+
+      -webkit-box-shadow: 0px 3px 12px -1px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 3px 12px -1px rgba(0,0,0,0.75);
+box-shadow: 0px 3px 12px -1px rgba(0,0,0,0.75);
+
+      img {
+
+      }
+
+      .card-body {
+        .btn {
+          background-color: $Tangerine !important;
+          border-color: $Tangerine !important;
+        }
+      }
     }
-
-    -webkit-box-shadow: 7px 8px 17px 4px rgba(0,0,0,0.22) !important;
--moz-box-shadow: 7px 8px 17px 4px rgba(0,0,0,0.22) !important;
-box-shadow: 7px 8px 17px 4px rgba(0,0,0,0.22) !important;
-
-  img {
-
   }
-  }
-}
+
   table {
     thead {
       tr {
@@ -141,7 +190,72 @@ box-shadow: 7px 8px 17px 4px rgba(0,0,0,0.22) !important;
 This is the CSS code for the restaurant page.
 
  */
+.restaurant {
+  background-color: $Tangerine !important;
+  min-width: 100% !important;
+  align-content: center !important;
 
+  a {
+    color: #FFF !important;
+    z-index: 1 !important;
+    min-height: 100% !important;
+
+
+
+  }
+
+  .btn {
+    background-color: $Tangerine !important;
+    color: #FFF !important;
+    margin-bottom: 1rem !important;
+    border-color: $Tan !important;
+    &:hover {
+      background-color: $Tan !important;
+      color: $Tangerine !important;
+    }
+  }
+
+
+  align-content: center !important;
+  text-align: center !important;
+
+  .row {
+    .food {
+      height: 100% !important;
+      width: 100% !important;
+      padding: 1rem;
+      align-content: center !important;
+      text-align: center !important;
+
+
+
+
+      h1 {
+        padding: 1rem;
+      }
+      ul {
+        //position: relative !important;
+        //left:25% !important;
+        max-width: 50vw !important;
+        margin: 0 auto;
+
+      .lunchmebish {
+        border: 1px solid #000;
+
+        h3 {
+          padding-top: 1rem;
+        }
+
+        p {
+
+        }
+        }
+      }
+    }
+
+
+  }
+}
 
 /*
 
@@ -150,7 +264,16 @@ This is the CSS code for the restaurant page.
 This is the CSS code for the info.
 
  */
-
+.info {
+  background-color: $Tangerine !important;
+  min-height: 100vh !important;
+  height: 100% !important;
+  padding: 1rem;
+  justify-content: center !important;
+  text-align: center !important;
+  z-index: -3 !important;
+  color: #FFF;
+}
 
 /*
 
