--- a/templates/info.html
+++ b/templates/info.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 {% block title %}Info{% endblock %}
 {% block content %}
+    <div class="info col-sm ">
     <h1>Info</h1>
     <p>Sdx-menu v2 is made for quick and mobile-friendly experience for looking daily menus.</p>
     <p>Menus are queried from Sodexo Oy's API.</p>
+    </div>
 {% endblock %}
